--- a/york.css
+++ b/york.css
@@ -15,18 +15,15 @@ div#caderno{
     padding:0px;
     min-height: 300px;
     break-inside: avoid;
-    columns: 400px;
+    columns: 380px;
 }
 
 div.artigo{
-    max-width:420px;
-    columns: 420px;
     max-width: 100%;
     padding-right:10px;
     float:left;
     border-right:1px solid black;
     border-bottom:solid 1px black;
-
 }
 
 div#propaganda{
@@ -59,23 +56,29 @@ header{
     header{
         font-size: 60pt;
     }
+    img#logo{
+        display:none;
+    }
 }
 
 @media (max-width: 500px) {
     header{
         font-size: 40pt;
     }
+    img#logo{
+        display:none;
+    }
 }
 
 h1,h2{
     text-align: center;
-    padding: 10px 0 10px 0;
+    padding: 10px 0;
 }
 
 h1{
     line-height: normal;
     font-family: 'Playfair Display', serif;
-    display: block;
+    display: initial;
     font-weight: 700;
     font-size: 30px;
     text-transform: uppercase;
@@ -93,23 +96,27 @@ h2{
 p{
     text-align:justify;
     text-indent: 2cm;
-    
     font-family: 'Copse';/*'Special Elite', serif;*/
+    orphans: 3;
 }
 img{
-    max-width: 100%;
+    max-width: 90%;
     display:block;
     float:none;
     margin:2px;
     padding:2px;
     filter:grayscale(100%);
     margin:auto;
-    border:1px dotted blue;
+}
+img#logo{
+    display:inline-block;
+    max-height: 100px;
+    filter:grayscale(0%)
 }
 figure{
     display:block;
     margin:auto;
-    width:90%;
+    max-width:100%;
     border:dotted 1px black;
 }
 figcaption{
@@ -126,8 +133,18 @@ q{
     display: block;
     margin: 10px 0 10px 0;
 }
+table,th,td{
+    border:solid 1px black;
+    margin:10px auto;
+    width:100%;
+    caption-side: bottom;
+}
+a{
+    text-decoration: none;
+}
 assina{
     text-align: right !important;
     float:right;
     font-size:10pt;
+    padding:10px;
 }
